--- a/src/directives/decorators/mui/select.html
+++ b/src/directives/decorators/mui/select.html
@@ -1,7 +1,7 @@
 <div mui-row>
-    <div mui-col="{{form.muiCol}}" class="{{form.htmlClass}} schema-form-select"
+    <div mui-col="{{form.muiCol ? form.muiCol : '1/1'}}" class="{{form.htmlClass}} schema-form-select"
             ng-class="{'has-error': hasError(), 'has-success': hasSuccess(), 'has-feedback': form.feedback !== false}">
-        <div><label class="" ng-show="showTitle()" for="{{form.key.slice(-1)[0]}}">{{form.title}}</label></div>
+        <div><label ng-show="showTitle()" for="{{form.key.slice(-1)[0]}}">{{form.title}}</label></div>
         <select ng-model="$$value$$"
                 ng-model-options="form.ngModelOptions"
                 ng-disabled="form.readonly"
